# rut206-sdk

./: .config  .config.old  .config.old2  .gitignore  README.md  build.sh  changelog  deploy.sh  gpl_version  ipk_packages.json  rules.mk  version.date
ais_gps_logger/: ais_gps_logger.init  ais_gps_logger.sh  deploy.sh
config/: Config-kernel.in  Config-tlt.in
include/: download.mk  hardware.mk  image.mk  kernel-build.mk  kernel-version.mk  package-dumpinfo.mk  package-gpl.mk  package.mk
ipk-example/: Makefile  README.md
package/base-files/: Makefile
package/boot/uboot-mt7621/: Makefile
package/devel/gcc10-arm-none-eabi/: Makefile
package/devel/meson/: Makefile
package/feeds/vuci/: api.mk  compile-app-gpl.sh  hs_theme.mk  package-lock.json  package.json  packages_static.sh  utils.mk
package/firmware/stm-usb-can/: Makefile
package/firmware/stm-usb-can/src/: .gitignore  CMakeLists.txt  README.md
package/firmware/stm-usb-can/src/cmake/: gcc-arm-none-eabi-update.cmake
package/firmware/stm-usb-can/src/files/: 99_stm32_flash
package/firmware/stm-usb-can/src/include/: compiler.h  config.h  i2c_slave.h  usbd_gs_can.h
package/firmware/stm-usb-can/src/ldscripts/: ldscript_base.inc
package/firmware/stm-usb-can/src/libs/STM32_HAL/: CMakeLists.txt
package/firmware/stm-usb-can/src/libs/STM32_HAL/config/: hal_include.h  stm32g0xx_hal_conf.h
package/firmware/stm-usb-can/src/libs/STM32_HAL/src/stm32g0xx/: stm32g0xx_hal_i2c.c
package/firmware/stm-usb-can/src/libs/STM32_USB_Device_Library/: CMakeLists.txt
package/firmware/stm-usb-can/src/src/: dfu.c  gpio.c  i2c.c  i2c_slave.c  interrupts.c  main.c  usbd_gs_can.c
package/firmware/stm-usb-can/src/src/boards/: g0b1-tlt_rut204.c
package/firmware/stm-usb-can/src/src/can/: m_can.c
package/firmware/stm-usb-can/src/src/device/: device_g0.c
package/firmware/wireless-regdb/: Makefile
package/kernel/linux/: Makefile
package/kernel/mac80211_515/: Makefile
package/kernel/ovpn-dco/: Makefile
package/kernel/stm-gpio/: Makefile
package/lang/luajit2/: Makefile
package/lang/python/: python3-package.mk
package/libs/file/: Makefile
package/libs/glib2/: Makefile
package/libs/libazure-iot-sdk-c/: Makefile
package/libs/libcotp/: Makefile
package/libs/libev/: Makefile
package/libs/libid3tag/: Makefile
package/libs/libjpeg-turbo/: Makefile
package/libs/libmodbus/: Makefile
package/libs/libnatpmp/: Makefile
package/libs/libogg/: Makefile
package/libs/libpcap/: Makefile
package/libs/libtasn1/: Makefile
package/libs/libubox/: Makefile
package/libs/libvorbis/: Makefile
package/libs/libxml2/: Makefile
package/libs/libyang/: Makefile
package/libs/openssl/: Makefile
package/libs/uclient/: Makefile
package/libs/ustream-ssl/: Makefile
package/libs/zlib/: Makefile
package/mail/emailrelay/: Makefile
package/multimedia/tlt-minidlna/: Makefile
package/network/miniupnpc/: Makefile
package/system/letsencrypt/: Makefile
package/system/openwrt-keyring/: Makefile
package/system/opkg/: Makefile
package/system/rpcd/: Config.in  Makefile
package/system/ubox/: Makefile
package/system/ubus/: Makefile
package/system/uci/: Makefile
package/system/urandom-seed/: Makefile
package/teltonika/apn_db/: Makefile
package/teltonika/azure_iothub/: Makefile
package/teltonika/bacnet-router/: bacnet-router
package/teltonika/bfdd-frr/: Makefile
package/teltonika/bfdd-frr-meta/: Makefile
package/teltonika/can_gw/: Makefile
package/teltonika/cmStreamApp/: Makefile
package/teltonika/coova-chilli/: Makefile
package/teltonika/data_sender/: Config.in  Makefile
package/teltonika/ddns-scripts/: Makefile
package/teltonika/dlms_client/: Makefile
package/teltonika/dmvpn/: Makefile
package/teltonika/dmvpn-meta/: Makefile
package/teltonika/dnp3/: Makefile
package/teltonika/easycwmp/: Makefile
package/teltonika/email_to_sms/: Makefile
package/teltonika/esim-lpac/: Makefile
package/teltonika/event_juggler/: Makefile
package/teltonika/frr-bgpd-meta/: Makefile
package/teltonika/frr-eigrpd-meta/: Makefile
package/teltonika/frr-nhrpd-meta/: Makefile
package/teltonika/frr-ospfd-meta/: Makefile
package/teltonika/frr-ripd-meta/: Makefile
package/teltonika/gkeepalive/: Makefile
package/teltonika/gps/: Makefile
package/teltonika/gsm/: Makefile
package/teltonika/iec60870_client/: Makefile
package/teltonika/iec60870_server/: Makefile
package/teltonika/impulse-counter/: Makefile
package/teltonika/inetd-ubus/: Makefile
package/teltonika/iomand/: Makefile
package/teltonika/ip_blockd/: Makefile
package/teltonika/ldpd-frr/: Makefile
package/teltonika/ldpd-frr-meta/: Makefile
package/teltonika/ledman/: Makefile
package/teltonika/mdcollect/: Makefile
package/teltonika/mobifd/: Makefile
package/teltonika/mobutils/: Makefile
package/teltonika/modbus_client/: Makefile
package/teltonika/modbus_server/: Makefile
package/teltonika/modbusgwd/: Makefile
package/teltonika/modem_control/: Makefile
package/teltonika/modem_logger/: Makefile
package/teltonika/mqtt-modbus-gateway/: Makefile
package/teltonika/networkmap/: Makefile
package/teltonika/ntpclient/: Makefile
package/teltonika/ntrip_client_v2/: Makefile
package/teltonika/opcua_client/: Makefile
package/teltonika/opcua_server/: Makefile
package/teltonika/package_restore/: Makefile
package/teltonika/pam/: Makefile
package/teltonika/pam_radius/: Makefile
package/teltonika/pam_tacacs/: Makefile
package/teltonika/port_eventsd/: Makefile
package/teltonika/profiler/: Makefile
package/teltonika/quota-limit/: Makefile
package/teltonika/reboot_utils/: Makefile
package/teltonika/rms-packages/: Makefile
package/teltonika/rut_fota/: Makefile
package/teltonika/scep/: Makefile
package/teltonika/shellinabox/: Makefile
package/teltonika/sim_switch/: Makefile
scripts/: Dockerfile  docker-bootstrap  dockerbuild  generate_license_pdf.py  set_merge_request_milestone.sh  target-metadata.pl  upload_opkg.sh
vuci-examples/: README
vuci-examples/vuci-app-example-ui/: Makefile
(+1276 files in other folders)
